Truncating shop titles and descriptions. Fixed buttons to new style. Need to display max char limit in admin view

--- a/css/cm_store.css
+++ b/css/cm_store.css
@@ -49,7 +49,7 @@
 
 .course_image_container{
 	width: 100%;
-	height: 205px;
+	height: 200px;
 	margin-left: auto;
 	margin-right: auto;
 	border-bottom: 1px solid rgba(178, 178, 178, 0.28);
@@ -68,6 +68,10 @@
 	height: 100%;
 }
 
+.course_text>p {
+	margin: 5px 0;
+}
+
 .course_description{
 	font-style: italic;
 	font-size: 12pt;
@@ -76,11 +80,22 @@
 .course_name{
 	font-weight: bold;
 	font-size: 14pt;
-	padding: 5px 0 0 10px;
+	padding: 0 10px;
+	margin: 0;
 }
 
-.cm_flip_link{
-	margin-top: 10px;
+.small-flip-container {
+	padding-top: 10px;
+}
+
+.buy_course_btn{
+	font-weight: bold;
+	background-color: #FF6600;
+
+}
+
+.small-flip-container .buy_course_btn{
+	margin-top: 20px;
 }
 
 .course_back_content{
@@ -88,6 +103,12 @@
 	height: 100%;
 	position: relative;
 	padding: 10px;
+}
+
+.course_back_content>.course_text {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 }
 
 .close_course {
@@ -103,5 +124,5 @@
 }
 
 .close_course:hover {
-	color: #009688;
+	color: #ff6600;
 }
